Fix hotkeys div overflow

--- a/client/src/app/core/hotkeys/hotkeys.component.scss
+++ b/client/src/app/core/hotkeys/hotkeys.component.scss
@@ -1,5 +1,6 @@
 .cfp-hotkeys-container {
-  display: table !important;
+  display: flex !important;
+  align-items: center;
   position: fixed;
   overflow: auto;
   width: 100%;
@@ -35,9 +36,7 @@
 
 .cfp-hotkeys {
   width: 100%;
-  height: 100%;
-  display: table-cell;
-  vertical-align: middle;
+  max-height: 100%;
 }
 
 .cfp-hotkeys table {
